# TelegramManager

./: README.md  manage.py  pyproject.toml
TelegramManager/: asgi.py  settings.py  urls.py  wsgi.py
