[tool.poetry]
name = "telegrammanager"
version = "0.1.0"
description = ""
authors = ["Никита Пономаренко <nik24012002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
